# dotfiles

./: .bashrc  .gitignore  .gitmodules  .gtkrc-2.0  .zshenv  .zshrc  README.md  issue  starship.toml
.bin/: rebar
.config/: .gitignore  kritarc  starship.toml
.config/fastfetch/: config.jsonc  logo.txt
.config/gcloud/: .last_survey_prompt.yaml  access_tokens.db  credentials.db
.config/gcloud/configurations/: config_default
.config/gtk-3.0/: settings.ini
.config/gtk-4.0/: assets  colors.css  gtk-dark.css  gtk.css  settings.ini
.config/hypr/: colors.conf  hyprland.conf  hyprlock.conf
.config/hypr/conf/: autostart.conf  cursor.conf
.config/hypr/scripts/: quake.sh
.config/kitty/: colors-matugen.conf  colors-wallust.conf  kitty.conf  tab_bar.py
.config/nwg-dock-hyprland/: colors.css
.config/psd/: .psd.conf  psd.conf
.config/qt6ct/: qt6ct.conf
.config/rofi/: colors.rasi
.config/waybar/: colors.css  modules.json
.config/waypaper/: config.ini
.config/wezterm/: .luarc.json
.config/wlogout/: colors.css
.config/xsettingsd/: xsettingsd.conf
.config/zed/: settings.json
.config/zshrc/: 00-init  10-functions  20-customization  25-aliases  30-autostart
Development/: iphonelogs
Development/bootstrap/: restore-build.sh
Development/qmk/: main.py  pyproject.toml
Development/trc20api/: errors  scrape.py
Development/trx-utils/: main.py  pyproject.toml
Development/trx-utils/utils/: ascii.py  crypt.py  usdt.py  wallet.py
Documents/: Microsoft Edge Passwords.csv  VIPS.zst
Documents/'portant/: JBR-DL.jpg~
ly/: config.ini  save.ini
(+61 files in other folders)
